--- a/.env
+++ b/.env
@@ -1,6 +1,4 @@
-NODE_ENV=prod
-
-VUE_APP_KEY="$2b$10$BBaq8ra2YoYOlXafGLGYpOiwg5x1njEhajxcWDDCrRnKf88fem6fu"
-VUE_APP_ENDPOINTS_GIN=633e82832b3499323bd4d8ce
-VUE_APP_ENDPOINTS_TONIC=633e82972b3499323bd4d8e2
-vue_APP_ENDPOINT_GARNISH=633e82ab2b3499323bd4d8fa
+VUE_APP_ENDPOINT_KEY = $2b$10$BBaq8ra2YoYOlXafGLGYpOiwg5x1njEhajxcWDDCrRnKf88fem6fu
+VUE_APP_ENDPOINT_GIN = 633e82832b3499323bd4d8ce
+VUE_APP_ENDPOINT_TONIC = 633e82972b3499323bd4d8e2
+VUE_APP_ENDPOINT_GARNISH = 633e82ab2b3499323bd4d8fa
