--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VUE_APP_ENDPOINT_KEY = $2b$10$BBaq8ra2YoYOlXafGLGYpOiwg5x1njEhajxcWDDCrRnKf88fem6fu
-VUE_APP_ENDPOINT_GIN = 633e82832b3499323bd4d8ce
-VUE_APP_ENDPOINT_TONIC = 633e82972b3499323bd4d8e2
-VUE_APP_ENDPOINT_GARNISH = 633e82ab2b3499323bd4d8fa
+VUE_APP_MASTERKEY = "\$2b\$10\$ixuOp9em/TPLBbiqxvqqfOSc7dy8VxN324DsKfzJzYaMg1B8D/d5G"
+VUE_APP_ENDPOINT_GIN = "6399e7d001a72b59f2305d72"
+VUE_APP_ENDPOINT_TONIC = "6399e7b5dfc68e59d5680cc3"
+VUE_APP_ENDPOINT_GARNISH = "6399e797dfc68e59d5680caa"
